<resources>
    <string name="app_name">SensorTest</string>
    <string name="x_pitch">MEME x軸</string>
    <string name="z_yaw">MEME z軸</string>
    <string name="y_roll">MEME y軸</string>
    <string name="x_mag">x軸（地磁気強度）</string>
    <string name="y_mag">y軸（地磁気強度）</string>
    <string name="z_mag">z軸（地磁気強度）</string>
    <string name="x_attitude">x軸角度</string>
    <string name="y_attitude">y軸角度</string>
    <string name="z_attitude">z軸角度</string>
    <string name="timestamp">タイムスタンプ</string>
    <string name="start_text">スタート</string>
    <string name="stop_text">ストップ</string>
    <string name="save_text">保存</string>
    <string name="memeScan_text">MEMEスキャン</string>
    <string name="memestatus_text">MEMEステータス</string>
    <string name="memeconnect_text">MEME接続</string>
    <string name="memestart_text">MEME開始</string>
    <string name="memestop_text">MEME停止</string>
    <string name="meme_x_edited">MEME修正角度</string>
    <string name="x_edited">端末修正角度</string>
</resources>
